<resources>
    <string name="app_name_placeholder">Ride %1$s</string>
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="ride_request">Ride Request Type</string>
    <string name="earnings">Earnings</string>
    <string name="settings">Settings</string>
    <string name="empty" />

    <!--SettingsFragment-->
    <string name="edit_account">Edit Account</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
...
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
    <string name="extra_sms">sms_body</string>
    <string name="text_tabulation">\t</string>
    <string name="version">Version\u00A0</string>
    <string name="navigate">Navigate</string>

    <!--Driver Map Fragment -->
    <string name="map.rate.title">Driver Earnings</string>
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>

    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
...
    <string name="text_this_week">This Week:</string>
    <string name="text_header_number_nof_trips">NUMBER\nOF TRIPS</string>
    <string name="text_header_total_fare">TOTAL\nFARE</string>
    <string name="text_header_total_ra_fee">TOTAL RA\nFEE</string>
    <string name="text_header_total_earnings">TOTAL\nEARNINGS</string>
    <string name="ride_cancelled">Trip was cancelled</string>
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
    <string name="text_trips_header">Trips</string>
    <string name="text_your_earning">Your earning</string>
    <string name="text_ride_service_fee">%1$s Fee</string>
    <string name="text_total_fare">Total Fare</string>
...
    <string name="cant_find_app_for_call">Can\'t find application to call</string>
    <string name="cant_find_app_to_send_message">Can\'t find application to send message</string>
    <string name="tips">TIPS</string>
    <string name="tip">Tip</string>
    <string name="rider_cancel_fee">Rider Cancellation Fee</string>
    <string name="send_report">Report defect</string>
    <string name="text_cancel_ride_confirmation">Are you sure you want to cancel ?</string>

    <string name="dynamic_queue_name">%1$s Queue</string>
    <string name="queue_in_number_info">Numbers represent your current spot\n in queue</string>
    <string name="queue_out_number_info">Numbers represent amount of drivers in the %s queue</string>
    <string name="queue_leaving_area_desc"> You have left the queue zone and have been removed from the queue</string>
    <string name="queue_leaving_inactive_desc">You have been removed from the queue because you were offline</string>
...
