...
    <string name="location_timeout_error">Unable to identify your location.</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="send_message_msg">Your message has been sent</string>
    <string name="send_message_title">Success</string>
    <string name="send_message_fail">Your message has failed</string>
    <string name="empty_message_error">Message can\'t be empty</string>
    <string name="connection_problems">Poor connectivity. Verify cell reception</string>

    <string name="masked_credit_card_number">**** **** **** %1$s</string>
    <string name="ride_active">You have an active ride.</string>

    <string name="no_mins">-- min</string>
    <string name="zero_mins">&lt;1 min</string>
...
    <string name="general_server_comunication_error">We experienced error during server communication, do you want to retry?</string>

    <string name="missing_tnc_card_photo_warning">Please upload %s photo to continue</string>
    <string name="missing_tnc_card_expiration_date_warning">Please choose valid expiration date to continue</string>

    <string name="loading">Loading…</string>
    <string name="you_have_arrived_to_pickup_location">You have arrived to pickup location</string>

    <string name="fb_email_error">Please allow to use your email in order to complete registration</string>
    <string name="fb_login_error">We are unable to access your email associated with Facebook.\nPlease check your permissions for %1$s and/or create a %1$s account using your email</string>
    <string name="first_name_must_be">First name must be at least %d characters</string>
    <string name="middle_name_must_be">Middle name must be at least %d characters or confirm you do not have a middle name</string>
    <string name="confirm_middle_name">Please confirm you do not have a middle name</string>
...
    <string name="minimum_fare_text">MINIMUM FARE</string>
    <string name="booking_fee_text">BOOKING FEE</string>
    <string name="city_tnc_fee_text">CITY TNC FEE</string>
    <string name="processing_fee_text">PROCESSING FEE</string>

    <string name="cant_process_image">We can\'t process your picture: %s</string>
    <string name="contact">Contact</string>

    <string name="text_contact_support">Contact Support</string>
    <string name="error_io_write_disk">Can\'t save file on disk. Please check if it\'s enough free disk space.</string>
    <string name="you_are_in_this_queue">You are in this queue</string>
    <string name="you_are_not_in_this_queue">You are not in this queue</string>

...
    <string name="field_required">This field is required.</string>

    <!-- edit picture -->
    <string name="edit_picture">Edit Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
...
    <string name="permission_contacts">Contacts</string>
    <string name="dont_have_permission">Ride requires your location to accurately pinpoint the location of your car. Please go to setting and enable location for %1$s</string>
    
    <!-- cancellation feedback -->
    <string name="cancel_feedback_rider_ok">Submit</string>
    <string name="cancel_feedback_rider_cancel">Cancel</string>
    <string name="cancel_feedback_driver_ok">Cancel Ride</string>
    <string name="cancel_feedback_driver_cancel">Don\'t Cancel Ride</string>
    <string name="cancel_feedback_message_hint">Enter your reason</string>
    <string name="cancel_feedback_rider_title">Your ride was cancelled.</string>
    <string name="cancel_feedback_rider_description">Tell us why and help us improve.</string>
    <string name="cancel_feedback_driver_title">Cancel this ride?</string>
    <string name="cancel_feedback_driver_description">The rider can be charged.</string>
    <string name="cancel_feedback_no_reason">Please select a reason</string>


</resources>
