...
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/upgradeCarType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/car_suv"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/white_80_opaq"
                app:fab_colorRipple="@color/caldroid_gray"
                app:fab_label="@string/upgrade_requested"
                app:fab_size="normal"
                tools:enabled="false"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/myLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_gps"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/white_80_opaq"
                app:fab_colorRipple="@color/caldroid_gray"
...
